--- a/hathor-api/pom.xml
+++ b/hathor-api/pom.xml
@@ -4,9 +4,30 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
+    <parent>
+        <groupId>com.hathor</groupId>
+        <artifactId>hathor</artifactId>
+        <version>0.1.1</version>
+    </parent>
+
     <artifactId>hathor-api</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1.1</version>
+    <name>hathor-api</name>
+    <description>hathor-api</description>
+
+    <properties>
+        <hathor.version>0.1.1</hathor.version>
+    </properties>
+
+
+
+    <dependencies>
+        <dependency>
+            <groupId>com.hathor</groupId>
+            <artifactId>hathor-common</artifactId>
+            <version>${hathor.version}</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
