--- a/hathor-portal/pom.xml
+++ b/hathor-portal/pom.xml
@@ -4,9 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
+    <parent>
+        <groupId>com.hathor</groupId>
+        <artifactId>hathor</artifactId>
+        <version>0.1.1</version>
+    </parent>
     <artifactId>hathor-portal</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1.1</version>
 
 
 </project>
