--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,18 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>com.hathor</groupId>
-        <artifactId>hathor</artifactId>
-        <version>0.1.1</version>
-    </parent>
-    <artifactId>hathor-core</artifactId>
+    <groupId>com.hathor</groupId>
+    <artifactId>hathor</artifactId>
+    <packaging>pom</packaging>
     <version>0.1.1</version>
 
 
+    <modules>
+        <module>hathor-api</module>
+        <module>hathor-common</module>
+        <module>hathor-core</module>
+        <module>hathor-portal</module>
+        <module>hathor-web</module>
+    </modules>
 
 </project>
