--- a/hathor-core/pom.xml
+++ b/hathor-core/pom.xml
@@ -12,6 +12,24 @@
     <artifactId>hathor-core</artifactId>
     <version>0.1.1</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.hathor</groupId>
+            <artifactId>hathor-common</artifactId>
+            <version>0.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.2.5</version>
+        </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 
 </project>
