--- a/hathor-core/pom.xml
+++ b/hathor-core/pom.xml
@@ -14,6 +14,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
             <groupId>com.hathor</groupId>
             <artifactId>hathor-common</artifactId>
             <version>0.1.1</version>
@@ -21,8 +26,9 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
-            <version>1.2.5</version>
+<!--            <version>1.2.5</version>-->
         </dependency>
+
 
         <dependency>
             <groupId>org.projectlombok</groupId>
