--- a/hathor-common/pom.xml
+++ b/hathor-common/pom.xml
@@ -34,6 +34,11 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2</artifactId>
+            <version>2.0.8</version>
+        </dependency>
 
         <dependency>
             <groupId>com.github.xiaoymin</groupId>
