--- a/hathor-core/pom.xml
+++ b/hathor-core/pom.xml
@@ -52,6 +52,14 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.gudusoft</groupId>
+            <artifactId>gsqlparser</artifactId>
+            <version>2.5.1.9</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/resources/lib/gudusoft.gsqlparser-2.5.1.9.jar</systemPath>
+        </dependency>
     </dependencies>
 
 </project>
